--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
             <a href="multi-agent-chat.html" class="chat-button primary">
                 🚀 开始多智能体对话
             </a>
+            <a href="webhook-test.html" class="chat-button secondary">
+                🔧 连接诊断工具
+            </a>
             <a href="../web_chat.html" class="chat-button secondary">
                 💬 单智能体聊天
             </a>
