--- a/index.html
+++ b/index.html
@@ -215,8 +215,11 @@
         </div>
         
         <div class="chat-buttons">
-            <a href="multi-agent-chat.html" class="chat-button primary">
-                🚀 开始多智能体对话
+            <a href="streaming-chat.html" class="chat-button primary">
+                ⚡ 实时流式多智能体对话
+            </a>
+            <a href="multi-agent-chat.html" class="chat-button secondary">
+                🚀 标准多智能体对话
             </a>
             <a href="webhook-test.html" class="chat-button secondary">
                 🔧 连接诊断工具
