--- a/index.html
+++ b/index.html
@@ -215,7 +215,10 @@
         </div>
         
         <div class="chat-buttons">
-            <a href="contextual-streaming-chat.html" class="chat-button primary">
+            <a href="frontend-config-chat.html" class="chat-button primary">
+                ⚙️ 前端配置聊天室
+            </a>
+            <a href="contextual-streaming-chat.html" class="chat-button secondary">
                 🤝 上下文共享讨论室
             </a>
             <a href="streaming-chat.html" class="chat-button secondary">
