--- a/frontend-config-chat.html
+++ b/frontend-config-chat.html
@@ -781,7 +781,7 @@
                 const requestBody = {
                     model: expert.model || 'deepseek/deepseek-chat-v3-0324:free',
                     messages: messages,
-                    stream: true,
+                    stream: false,  // 暂时使用非流式避免复杂性
                     temperature: 0.7,
                     max_tokens: 2000
                 };
@@ -805,7 +805,9 @@
                 }
 
                 console.log('发送请求到:', openRouterUrl);
-                const response = await fetch(openRouterUrl, fetchOptions);
+
+                // 使用XMLHttpRequest替代fetch来避免TypeError
+                const response = await makeXHRRequest(openRouterUrl, fetchOptions);
 
                 console.log('API响应状态:', response.status, response.statusText);
 
@@ -827,62 +829,20 @@
                 cursor.className = 'streaming-cursor';
                 textElement.appendChild(cursor);
 
-                // 处理流式响应
-                console.log('开始处理流式响应:', expertName);
+                // 处理非流式响应
+                console.log('开始处理API响应:', expertName);
 
-                if (!response.body) {
-                    throw new Error('响应体为空');
-                }
+                // 获取完整响应
+                const result = await response.json();
+                const fullContent = result.choices[0].message.content;
 
-                const reader = response.body.getReader();
-                const decoder = new TextDecoder();
-                let buffer = '';
-                let fullContent = '';
-
-                while (true) {
-                    const { done, value } = await reader.read();
-
-                    if (done) break;
-
-                    buffer += decoder.decode(value, { stream: true });
-                    const lines = buffer.split('\n');
-                    buffer = lines.pop(); // 保留不完整的行
-
-                    for (const line of lines) {
-                        if (line.startsWith('data: ')) {
-                            const data = line.slice(6);
-
-                            if (data === '[DONE]') {
-                                break;
-                            }
-
-                            try {
-                                const parsed = JSON.parse(data);
-                                const delta = parsed.choices?.[0]?.delta?.content;
-
-                                if (delta) {
-                                    fullContent += delta;
-                                    // 移除光标，添加新内容，重新添加光标
-                                    if (cursor && cursor.parentNode === textElement) {
-                                        textElement.removeChild(cursor);
-                                    }
-                                    textElement.innerHTML = formatText(fullContent);
-                                    if (cursor) {
-                                        textElement.appendChild(cursor);
-                                    }
-                                    scrollToBottom();
-                                }
-                            } catch (e) {
-                                console.warn('解析SSE数据失败:', e, data);
-                            }
-                        }
-                    }
-                }
-
-                // 完成流式输出
+                // 移除光标
                 if (cursor && cursor.parentNode === textElement) {
                     textElement.removeChild(cursor);
                 }
+
+                // 显示完整内容
+                textElement.innerHTML = formatText(fullContent);
                 if (statusDot && statusElement) {
                     statusDot.className = 'status-dot completed';
                     const statusSpan = statusElement.querySelector('span');
@@ -975,6 +935,58 @@
             const div = document.createElement('div');
             div.textContent = text;
             return div.innerHTML;
+        }
+
+        // 使用XMLHttpRequest替代fetch来避免TypeError
+        function makeXHRRequest(url, options) {
+            return new Promise((resolve, reject) => {
+                const xhr = new XMLHttpRequest();
+                xhr.open(options.method || 'GET', url);
+
+                // 设置headers
+                if (options.headers) {
+                    for (const [key, value] of Object.entries(options.headers)) {
+                        try {
+                            xhr.setRequestHeader(key, value);
+                        } catch (e) {
+                            console.warn(`无法设置header ${key}:`, e);
+                        }
+                    }
+                }
+
+                xhr.onload = function() {
+                    if (xhr.status >= 200 && xhr.status < 300) {
+                        // 对于非流式响应，直接返回简化的response对象
+                        const response = {
+                            ok: true,
+                            status: xhr.status,
+                            statusText: xhr.statusText,
+                            json: function() {
+                                return Promise.resolve(JSON.parse(xhr.responseText));
+                            }
+                        };
+                        resolve(response);
+                    } else {
+                        reject(new Error(`HTTP ${xhr.status}: ${xhr.statusText}`));
+                    }
+                };
+
+                xhr.onerror = function() {
+                    reject(new Error('网络错误'));
+                };
+
+                xhr.ontimeout = function() {
+                    reject(new Error('请求超时'));
+                };
+
+                xhr.timeout = 30000; // 30秒超时
+
+                try {
+                    xhr.send(options.body || null);
+                } catch (e) {
+                    reject(new Error(`发送请求失败: ${e.message}`));
+                }
+            });
         }
     </script>
 </body>
